--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="modal"></div>
   </body>
   <script
     src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
